[gd_scene load_steps=11 format=3 uid="uid://chho28kpgd2nj"]

[ext_resource type="FontVariation" uid="uid://dnwv2plgp22ay" path="res://assets/fonts/poco_import.tres" id="1_0nu4q"]
[ext_resource type="Script" path="res://menu/notification_ui.gd" id="1_yhnnf"]
[ext_resource type="AudioStream" uid="uid://dasov36rdmyw7" path="res://assets/audio/cannot_switch.wav" id="3_w72u5"]
[ext_resource type="AudioStream" uid="uid://bmqvc01a0t8kk" path="res://assets/audio/switch_to_kat.wav" id="4_h0mcc"]
[ext_resource type="AudioStream" uid="uid://cbk6k2robh7ry" path="res://assets/audio/switch_to_gon.wav" id="5_bvvt3"]
[ext_resource type="AudioStream" uid="uid://deduq0c115wjo" path="res://assets/audio/stay_there.wav" id="6_ob25y"]
[ext_resource type="AudioStream" uid="uid://bfgocc33s3w1s" path="res://assets/audio/follow_me.wav" id="7_kct4s"]

[sub_resource type="Animation" id="Animation_284vq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NotificationLabel:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_qj2sj"]
resource_name = "show"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NotificationLabel:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("NotificationLabel:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yhkwu"]
_data = {
"RESET": SubResource("Animation_284vq"),
"show": SubResource("Animation_qj2sj")
}

[node name="NotificationUI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_yhnnf")
notification_text = {
1: ["Kat's turn!", Color(1, 0.509804, 0, 1)],
2: ["Gon's turn!", Color(0, 0.588235, 1, 1)],
3: ["Cannot Switch!", Color(1, 0, 0, 1)],
4: ["Follow me!", Color(1, 1, 1, 1)],
5: ["Stay there!", Color(1, 0, 0, 1)],
6: ["Cannot Split!", Color(1, 0, 0, 1)],
7: ["Where's your partner?", Color(1, 0, 0, 1)]
}

[node name="NotificationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_yhkwu")
}

[node name="NotificationLabel" type="Label" parent="."]
self_modulate = Color(1, 1, 1, 0)
z_index = 20
layout_mode = 0
offset_left = -1.0
offset_top = -20.0
offset_right = 190.0
offset_bottom = -7.0
scale = Vector2(5, 5)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/shadow_outline_size = 0
theme_override_fonts/font = ExtResource("1_0nu4q")
theme_override_font_sizes/font_size = 10
text = "Notification Text
"
horizontal_alignment = 2
vertical_alignment = 1

[node name="CantSwitchSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_w72u5")
volume_db = -5.0
pitch_scale = 0.85

[node name="SwitchToKatSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_h0mcc")
volume_db = -5.0
pitch_scale = 1.1

[node name="SwitchToGonSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_bvvt3")
volume_db = -5.0
pitch_scale = 0.9

[node name="StayThereSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_ob25y")
volume_db = -5.0

[node name="FollowMeSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_kct4s")
volume_db = -5.0
